.antlr/lensParser.java
// Generated from c:/Users/augus/compilador_lens/lens.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class lensParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		START=1, END=2, LET=3, PRINT=4, INPUT=5, IF=6, ELSEIF=7, ELSE=8, FOR=9, 
		WHILE=10, IN=11, INT_TYPE=12, STRING_TYPE=13, DUPONT=14, POINT2=15, DOT2=16, 
		VIRG=17, EQUALS=18, P_N=19, P_I=20, C_N=21, C_I=22, MUL=23, DIV=24, ADD=25, 
		SUB=26, EQ=27, NEQ=28, LT=29, GT=30, LTE=31, GTE=32, AND=33, OR=34, STRING=35, 
		INT=36, VAR=37, COMENTARIO=38, WS=39;
	public static final int
		RULE_lens = 0, RULE_comando = 1, RULE_impressao = 2, RULE_entrada = 3, 
		RULE_condicional = 4, RULE_if_stmt = 5, RULE_elseif_stmt = 6, RULE_else_stmt = 7, 
		RULE_lacofor = 8, RULE_lacowhile = 9, RULE_expressao = 10, RULE_expressao_logica = 11, 
		RULE_expressao_comparacao = 12, RULE_expressao_arit = 13, RULE_termo_arit = 14, 
		RULE_fator = 15, RULE_literal = 16, RULE_condicao = 17, RULE_op_adicao = 18, 
		RULE_op_multiplicacao = 19, RULE_op_logico = 20, RULE_op_comparacao = 21, 
		RULE_declaracao = 22, RULE_tipo = 23, RULE_atribuicao = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"lens", "comando", "impressao", "entrada", "condicional", "if_stmt", 
			"elseif_stmt", "else_stmt", "lacofor", "lacowhile", "expressao", "expressao_logica", 
			"expressao_comparacao", "expressao_arit", "termo_arit", "fator", "literal", 
			"condicao", "op_adicao", "op_multiplicacao", "op_logico", "op_comparacao", 
			"declaracao", "tipo", "atribuicao"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@start'", "'@end'", "'let'", "'print'", "'input'", "'if'", "'elseif'", 
			"'else'", "'for'", "'while'", "'in'", "'int'", "'String'", "'::'", "':'", 
			"'..'", "','", "'='", "'('", "')'", "'{'", "'}'", "'*'", "'/'", "'+'", 
			"'-'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "START", "END", "LET", "PRINT", "INPUT", "IF", "ELSEIF", "ELSE", 
			"FOR", "WHILE", "IN", "INT_TYPE", "STRING_TYPE", "DUPONT", "POINT2", 
			"DOT2", "VIRG", "EQUALS", "P_N", "P_I", "C_N", "C_I", "MUL", "DIV", "ADD", 
			"SUB", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "AND", "OR", "STRING", 
			"INT", "VAR", "COMENTARIO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lens.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lensParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LensContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(lensParser.START, 0); }
		public TerminalNode END() { return getToken(lensParser.END, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public LensContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lens; }
	}

	public final LensContext lens() throws RecognitionException {
		LensContext _localctx = new LensContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lens);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(START);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438955128L) != 0)) {
				{
				{
				setState(51);
				comando();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public ImpressaoContext impressao() {
			return getRuleContext(ImpressaoContext.class,0);
		}
		public EntradaContext entrada() {
			return getRuleContext(EntradaContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public LacoforContext lacofor() {
			return getRuleContext(LacoforContext.class,0);
		}
		public LacowhileContext lacowhile() {
			return getRuleContext(LacowhileContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comando);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				declaracao();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				atribuicao();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				impressao();
				}
				break;
			case INPUT:
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				entrada();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 5);
				{
				setState(63);
				condicional();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 6);
				{
				setState(64);
				lacofor();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 7);
				{
				setState(65);
				lacowhile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpressaoContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(lensParser.PRINT, 0); }
		public TerminalNode DUPONT() { return getToken(lensParser.DUPONT, 0); }
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> VIRG() { return getTokens(lensParser.VIRG); }
		public TerminalNode VIRG(int i) {
			return getToken(lensParser.VIRG, i);
		}
		public ImpressaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impressao; }
	}

	public final ImpressaoContext impressao() throws RecognitionException {
		ImpressaoContext _localctx = new ImpressaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_impressao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(PRINT);
			setState(69);
			match(DUPONT);
			setState(70);
			expressao();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRG) {
				{
				{
				setState(71);
				match(VIRG);
				setState(72);
				expressao();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntradaContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(lensParser.INPUT, 0); }
		public TerminalNode P_N() { return getToken(lensParser.P_N, 0); }
		public TerminalNode VAR() { return getToken(lensParser.VAR, 0); }
		public TerminalNode P_I() { return getToken(lensParser.P_I, 0); }
		public EntradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entrada; }
	}

	public final EntradaContext entrada() throws RecognitionException {
		EntradaContext _localctx = new EntradaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_entrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(INPUT);
			setState(79);
			match(P_N);
			setState(80);
			match(VAR);
			setState(81);
			match(P_I);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public List<Elseif_stmtContext> elseif_stmt() {
			return getRuleContexts(Elseif_stmtContext.class);
		}
		public Elseif_stmtContext elseif_stmt(int i) {
			return getRuleContext(Elseif_stmtContext.class,i);
		}
		public Else_stmtContext else_stmt() {
			return getRuleContext(Else_stmtContext.class,0);
		}
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			if_stmt();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSEIF) {
				{
				{
				setState(84);
				elseif_stmt();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(90);
				else_stmt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_stmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(lensParser.IF, 0); }
		public TerminalNode P_N() { return getToken(lensParser.P_N, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public TerminalNode P_I() { return getToken(lensParser.P_I, 0); }
		public TerminalNode C_N() { return getToken(lensParser.C_N, 0); }
		public TerminalNode C_I() { return getToken(lensParser.C_I, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public If_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stmt; }
	}

	public final If_stmtContext if_stmt() throws RecognitionException {
		If_stmtContext _localctx = new If_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_if_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(IF);
			setState(94);
			match(P_N);
			setState(95);
			condicao();
			setState(96);
			match(P_I);
			setState(97);
			match(C_N);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438955128L) != 0)) {
				{
				{
				setState(98);
				comando();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(C_I);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Elseif_stmtContext extends ParserRuleContext {
		public TerminalNode ELSEIF() { return getToken(lensParser.ELSEIF, 0); }
		public TerminalNode P_N() { return getToken(lensParser.P_N, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public TerminalNode P_I() { return getToken(lensParser.P_I, 0); }
		public TerminalNode C_N() { return getToken(lensParser.C_N, 0); }
		public TerminalNode C_I() { return getToken(lensParser.C_I, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public Elseif_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseif_stmt; }
	}

	public final Elseif_stmtContext elseif_stmt() throws RecognitionException {
		Elseif_stmtContext _localctx = new Elseif_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_elseif_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ELSEIF);
			setState(107);
			match(P_N);
			setState(108);
			condicao();
			setState(109);
			match(P_I);
			setState(110);
			match(C_N);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438955128L) != 0)) {
				{
				{
				setState(111);
				comando();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(C_I);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Else_stmtContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(lensParser.ELSE, 0); }
		public TerminalNode C_N() { return getToken(lensParser.C_N, 0); }
		public TerminalNode C_I() { return getToken(lensParser.C_I, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public Else_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_stmt; }
	}

	public final Else_stmtContext else_stmt() throws RecognitionException {
		Else_stmtContext _localctx = new Else_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_else_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ELSE);
			setState(120);
			match(C_N);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438955128L) != 0)) {
				{
				{
				setState(121);
				comando();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(C_I);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LacoforContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(lensParser.FOR, 0); }
		public TerminalNode VAR() { return getToken(lensParser.VAR, 0); }
		public TerminalNode IN() { return getToken(lensParser.IN, 0); }
		public List<Expressao_aritContext> expressao_arit() {
			return getRuleContexts(Expressao_aritContext.class);
		}
		public Expressao_aritContext expressao_arit(int i) {
			return getRuleContext(Expressao_aritContext.class,i);
		}
		public TerminalNode DOT2() { return getToken(lensParser.DOT2, 0); }
		public TerminalNode C_N() { return getToken(lensParser.C_N, 0); }
		public TerminalNode C_I() { return getToken(lensParser.C_I, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public LacoforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lacofor; }
	}

	public final LacoforContext lacofor() throws RecognitionException {
		LacoforContext _localctx = new LacoforContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lacofor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(FOR);
			setState(130);
			match(VAR);
			setState(131);
			match(IN);
			setState(132);
			expressao_arit();
			setState(133);
			match(DOT2);
			setState(134);
			expressao_arit();
			setState(135);
			match(C_N);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438955128L) != 0)) {
				{
				{
				setState(136);
				comando();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(C_I);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LacowhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(lensParser.WHILE, 0); }
		public TerminalNode P_N() { return getToken(lensParser.P_N, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public TerminalNode P_I() { return getToken(lensParser.P_I, 0); }
		public TerminalNode C_N() { return getToken(lensParser.C_N, 0); }
		public TerminalNode C_I() { return getToken(lensParser.C_I, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public LacowhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lacowhile; }
	}

	public final LacowhileContext lacowhile() throws RecognitionException {
		LacowhileContext _localctx = new LacowhileContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lacowhile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(WHILE);
			setState(145);
			match(P_N);
			setState(146);
			condicao();
			setState(147);
			match(P_I);
			setState(148);
			match(C_N);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438955128L) != 0)) {
				{
				{
				setState(149);
				comando();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(C_I);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoContext extends ParserRuleContext {
		public Expressao_logicaContext expressao_logica() {
			return getRuleContext(Expressao_logicaContext.class,0);
		}
		public ExpressaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressao; }
	}

	public final ExpressaoContext expressao() throws RecognitionException {
		ExpressaoContext _localctx = new ExpressaoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expressao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			expressao_logica();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expressao_logicaContext extends ParserRuleContext {
		public List<Expressao_comparacaoContext> expressao_comparacao() {
			return getRuleContexts(Expressao_comparacaoContext.class);
		}
		public Expressao_comparacaoContext expressao_comparacao(int i) {
			return getRuleContext(Expressao_comparacaoContext.class,i);
		}
		public List<Op_logicoContext> op_logico() {
			return getRuleContexts(Op_logicoContext.class);
		}
		public Op_logicoContext op_logico(int i) {
			return getRuleContext(Op_logicoContext.class,i);
		}
		public Expressao_logicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressao_logica; }
	}

	public final Expressao_logicaContext expressao_logica() throws RecognitionException {
		Expressao_logicaContext _localctx = new Expressao_logicaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expressao_logica);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			expressao_comparacao();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(160);
				op_logico();
				setState(161);
				expressao_comparacao();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expressao_comparacaoContext extends ParserRuleContext {
		public List<Expressao_aritContext> expressao_arit() {
			return getRuleContexts(Expressao_aritContext.class);
		}
		public Expressao_aritContext expressao_arit(int i) {
			return getRuleContext(Expressao_aritContext.class,i);
		}
		public Op_comparacaoContext op_comparacao() {
			return getRuleContext(Op_comparacaoContext.class,0);
		}
		public Expressao_comparacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressao_comparacao; }
	}

	public final Expressao_comparacaoContext expressao_comparacao() throws RecognitionException {
		Expressao_comparacaoContext _localctx = new Expressao_comparacaoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expressao_comparacao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			expressao_arit();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8455716864L) != 0)) {
				{
				setState(169);
				op_comparacao();
				setState(170);
				expressao_arit();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expressao_aritContext extends ParserRuleContext {
		public List<Termo_aritContext> termo_arit() {
			return getRuleContexts(Termo_aritContext.class);
		}
		public Termo_aritContext termo_arit(int i) {
			return getRuleContext(Termo_aritContext.class,i);
		}
		public List<Op_adicaoContext> op_adicao() {
			return getRuleContexts(Op_adicaoContext.class);
		}
		public Op_adicaoContext op_adicao(int i) {
			return getRuleContext(Op_adicaoContext.class,i);
		}
		public Expressao_aritContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressao_arit; }
	}

	public final Expressao_aritContext expressao_arit() throws RecognitionException {
		Expressao_aritContext _localctx = new Expressao_aritContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_expressao_arit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			termo_arit();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ADD || _la==SUB) {
				{
				{
				setState(175);
				op_adicao();
				setState(176);
				termo_arit();
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Termo_aritContext extends ParserRuleContext {
		public List<FatorContext> fator() {
			return getRuleContexts(FatorContext.class);
		}
		public FatorContext fator(int i) {
			return getRuleContext(FatorContext.class,i);
		}
		public List<Op_multiplicacaoContext> op_multiplicacao() {
			return getRuleContexts(Op_multiplicacaoContext.class);
		}
		public Op_multiplicacaoContext op_multiplicacao(int i) {
			return getRuleContext(Op_multiplicacaoContext.class,i);
		}
		public Termo_aritContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termo_arit; }
	}
